Commited new changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <body>
     <div class="glossy-container">
       <div class="h1">Sentor</div>
-      <ul>
+      <!-- Hamburger Icon -->
+      <div class="hamburger" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul class="nav-links">
         <li><a href="#">Home</a></li>
         <li><a href="#">Generate</a></li>
         <li><a href="#">Work</a></li>
@@ -27,9 +33,9 @@
       <br /><br /><br />
       <div class="block">
         <div class="row">
-          <div class="box"><a href="#">Generate </a></div>
-          <div class="box"><a href="#">Build Website </a></div>
-          <div class="box"><a href="#">Get expert tips </a></div>
+          <div class="box"><a href="#">Generate</a></div>
+          <div class="box"><a href="#">Build Website</a></div>
+          <div class="box"><a href="#">Get expert tips</a></div>
         </div>
         <div class="row">
           <div class="box"><a href="#">Hire Professionals</a></div>
@@ -38,5 +44,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
